Fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body {
 
 .squareInnerContainer {
 	position: relative;
-	padding: 50px, 15px, 35px;
+	padding: 50px 15px 35px;
 	text-align: center;
 	border: 2px solid #444;
 	border-top: none;
